# python_rocks_logging

./: .notes.md.swp  .pre-commit-config.yaml  LICENSE  README.md  notes.md  pylama.ini  pyproject.toml
end/: 1_basic_config.py  2_extra_parameters.py  3_filters.py  4_0_handlers.py  4_1_socket_listener.py  4_2_queue_sender.py  4_2_socket_sender.py  4_3_file_handler.py  5_optimisation.py  5_optimization.py  6_exc_info.py  settings.py
end/functions/: functions.py
logging_present/: .filters.py.swp  basic_config.py  extra_parameters.py  filters.py  handlers.py  listener_example.py  optimisation.py  sender_example.py
start/: 1_basic_config.py  2_extra_parameters.py  3_filters.py  4_0_handlers.py  4_1_socket_listener.py  4_2_socket_sender.py  4_3_file_handler.py  5_optimisation.py  6_exc_info.py
