[tool.poetry]
name = "pyrocks_meetup_python_logging"
version = "0.1.0"
description = ""
authors = ["Konstantin Mokhov <Konstantin_Mokhov@epam.com>"]
packages = [
    { include = "end"  },
    { include = "start" },
]

[tool.poetry.dependencies]
python = "^3.7"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
